--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <meta property=og:site_name content="Prashant Jalan">
 <meta property=og:url content="http://www.prashantjalan.com/">
 <meta property=og:description content="Prashant Jalan's Homepage">
-<meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg1.JPG">
+<meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg1.jpg">
 <meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg3.jpg">
-<meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg2.JPG">
+<meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg2.jpg">
 </head>
 <body>
 <div class=preloader>
