--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <meta property=og:description content="Prashant Jalan's Homepage">
 <meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg1.jpg">
 <meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg3.jpg">
-<meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg2.jpg">
+<meta property=og:image content="http://www.prashantjalan.com/images/backgrounds/bg2.JPG">
 </head>
 <body>
 <div class=preloader>
